--- a/index.html
+++ b/index.html
@@ -15,10 +15,6 @@
     body {
       font-family: sans-serif;
       background: #f1f1f1;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
       margin: 0;
       padding: 20px;
     }
@@ -29,7 +25,7 @@
       border-radius: 10px;
       padding: 20px;
       max-width: 500px;
-      width: 100%;
+      margin: 0 auto;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
 
@@ -62,7 +58,6 @@
       border-radius: 8px;
       font-size: 16px;
       cursor: pointer;
-      white-space: nowrap;
       width: 100%;
     }
 
@@ -81,12 +76,12 @@
       border-radius: 8px;
     }
 
-    #geoError {
+    #map {
+      width: 100%;
+      height: 400px;
+      margin-top: 20px;
+      border-radius: 8px;
       display: none;
-      color: red;
-      font-size: 13px;
-      margin-top: 10px;
-      text-align: center;
     }
   </style>
 </head>
@@ -108,23 +103,59 @@
 
     <div class="secure-text">🔒 We keep your info safe and private.</div>
     <div id="result"></div>
-    <div id="geoError">⚠️ Location access is required. Please enable it in your browser settings.</div>
+    <div id="map"></div>
   </div>
 
   <script>
+    let map;
+    let drawingManager;
+
     function handleAddressSubmit(event) {
       event.preventDefault();
-      const addressInput = document.getElementById("addressInput").value.trim();
-      if (!addressInput) return;
-
-      sessionStorage.setItem("selectedAddress", addressInput);
+      const address = document.getElementById("addressInput").value.trim();
+      sessionStorage.setItem("selectedAddress", address);
       document.getElementById("step1-form").style.display = "none";
       document.getElementById("step2-form").style.display = "flex";
+      document.getElementById("map").style.display = "block";
+      geocodeAddressAndInitMap(address);
+    }
+
+    function geocodeAddressAndInitMap(address) {
+      const geocodeUrl = `https://maps.googleapis.com/maps/api/geocode/json?address=${encodeURIComponent(address)}&key=YOUR_GOOGLE_API_KEY`;
+
+      fetch(geocodeUrl)
+        .then(response => response.json())
+        .then(data => {
+          const location = data.results[0].geometry.location;
+          map = new google.maps.Map(document.getElementById("map"), {
+            center: location,
+            zoom: 18,
+            mapTypeId: "hybrid"
+          });
+
+          drawingManager = new google.maps.drawing.DrawingManager({
+            drawingMode: google.maps.drawing.OverlayType.POLYGON,
+            drawingControl: true,
+            drawingControlOptions: {
+              position: google.maps.ControlPosition.TOP_CENTER,
+              drawingModes: ["polygon"]
+            }
+          });
+
+          drawingManager.setMap(map);
+
+          google.maps.event.addListener(drawingManager, "overlaycomplete", function (event) {
+            const polygon = event.overlay;
+            const areaMeters = google.maps.geometry.spherical.computeArea(polygon.getPath());
+            const areaSqFt = areaMeters * 10.7639;
+            alert("🧱 Estimated Drawn Area: " + areaSqFt.toFixed(2) + " sq ft");
+          });
+        })
+        .catch(error => console.error("Geocode error:", error));
     }
 
     async function sendEmail({ fullName, email, phone }) {
       try {
-        const address = sessionStorage.getItem("selectedAddress") || "(not provided)";
         const res = await fetch("https://formspree.io/f/xblylokk", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
@@ -132,7 +163,7 @@
             fullName,
             email,
             phone,
-            message: `New Quote Lead\n\nName: ${fullName}\nEmail: ${email}\nPhone: ${phone}\nAddress: ${address}`
+            message: `New Quote Lead\n\nName: ${fullName}\nEmail: ${email}\nPhone: ${phone}`
           }),
         });
         if (!res.ok) throw new Error("Email send failed");
@@ -150,9 +181,7 @@
     async function getProperty(event) {
       event.preventDefault();
       const resultDiv = document.getElementById("result");
-      const geoErrorDiv = document.getElementById("geoError");
-      resultDiv.innerHTML = "📍 Initiating geolocation and real-time quote calculation. Please allow up to 30 seconds...";
-      geoErrorDiv.style.display = "none";
+      resultDiv.innerHTML = "🛰 Initiating address lookup and quote calculation...";
 
       const fullName = document.getElementById("fullName").value.trim();
       const email = document.getElementById("email").value.trim();
@@ -160,74 +189,64 @@
 
       await sendEmail({ fullName, email, phone });
 
-      if (!navigator.geolocation) {
-        resultDiv.innerHTML = "Geolocation not supported by this browser.";
-        return;
-      }
+      try {
+        const response = await fetch('https://raw.githubusercontent.com/digit2ai/property-lookup-site/main/properties.json.gz');
+        const compressed = new Uint8Array(await response.arrayBuffer());
+        const decompressed = new TextDecoder().decode(pako.ungzip(compressed));
+        const data = JSON.parse(decompressed);
 
-      navigator.geolocation.getCurrentPosition(async () => {
-        try {
-          const response = await fetch('https://raw.githubusercontent.com/digit2ai/property-lookup-site/main/properties.json.gz');
-          const compressed = new Uint8Array(await response.arrayBuffer());
-          const decompressed = new TextDecoder().decode(pako.ungzip(compressed));
-          const data = JSON.parse(decompressed);
+        const userInput = sessionStorage.getItem("selectedAddress") || "";
+        const inputHouse = extractHouseNumber(userInput);
 
-          const userInput = sessionStorage.getItem("selectedAddress") || "";
-          const inputHouse = extractHouseNumber(userInput);
+        const fuse = new Fuse(data, {
+          keys: ['Address'],
+          threshold: 0.4,
+          distance: 100,
+          ignoreLocation: true,
+          includeScore: true,
+        });
 
-          const fuse = new Fuse(data, {
-            keys: ['Address'],
-            threshold: 0.4,
-            distance: 100,
-            ignoreLocation: true,
-            includeScore: true,
-          });
-
-          const results = fuse.search(userInput);
-          let finalResult = null;
-          for (const r of results) {
-            const house = extractHouseNumber(r.item.Address || "");
-            if (house === inputHouse) {
-              finalResult = r.item;
-              break;
-            }
+        const results = fuse.search(userInput);
+        let finalResult = null;
+        for (const r of results) {
+          const house = extractHouseNumber(r.item.Address || "");
+          if (house === inputHouse) {
+            finalResult = r.item;
+            break;
           }
-
-          if (!finalResult && results.length > 0) {
-            finalResult = results[0].item;
-          }
-
-          if (finalResult) {
-            const basePrice = 40;
-            const rate = 0.005;
-            const total = basePrice + (rate * parseFloat(finalResult["Lot Size"] || 0));
-            const totalFormatted = total.toFixed(2);
-
-            const staticMapUrl = `https://maps.googleapis.com/maps/api/staticmap?center=${encodeURIComponent(finalResult.Address)}&zoom=17&size=400x200&maptype=satellite&markers=color:red%7C${encodeURIComponent(finalResult.Address)}&key=AIzaSyC3EJTm3D0afQzZebyLovtODu0DXGlQAPg`;
-
-            resultDiv.innerHTML = `
-              <strong>Address:</strong> ${finalResult.Address}<br>
-              <strong>Lot Size:</strong> ${finalResult["Lot Size"]} sq ft<br>
-              <strong>Owner:</strong> ${finalResult.Owner}<br>
-              <strong>Type:</strong> ${finalResult.Type}<br>
-              <strong>Estimated Price:</strong> $${totalFormatted}<br><br>
-              <img src="${staticMapUrl}" alt="Map of property" style="width: 100%; border-radius: 6px; margin-bottom: 15px;" />
-              <button onclick="window.open('https://tampalawnpro.com/demo-3394', '_blank')" 
-                      style="background: #f4b400; color: #000; padding: 12px 20px; border: none; border-radius: 6px; font-weight: bold; cursor: pointer;">
-                Book This Service →
-              </button>
-            `;
-          } else {
-            resultDiv.innerHTML = "No matching property found.";
-          }
-        } catch (error) {
-          resultDiv.innerHTML = "Error loading property data.";
-          console.error(error);
         }
-      }, (error) => {
-        geoErrorDiv.style.display = "block";
-        console.error("Geolocation error:", error);
-      });
+
+        if (!finalResult && results.length > 0) {
+          finalResult = results[0].item;
+        }
+
+        if (finalResult) {
+          const basePrice = 40;
+          const rate = 0.005;
+          const total = basePrice + (rate * parseFloat(finalResult["Lot Size"] || 0));
+          const totalFormatted = total.toFixed(2);
+
+          const staticMapUrl = `https://maps.googleapis.com/maps/api/staticmap?center=${encodeURIComponent(finalResult.Address)}&zoom=17&size=400x200&maptype=satellite&markers=color:red%7C${encodeURIComponent(finalResult.Address)}&key=YOUR_GOOGLE_API_KEY`;
+
+          resultDiv.innerHTML = `
+            <strong>Address:</strong> ${finalResult.Address}<br>
+            <strong>Lot Size:</strong> ${finalResult["Lot Size"]} sq ft<br>
+            <strong>Owner:</strong> ${finalResult.Owner}<br>
+            <strong>Type:</strong> ${finalResult.Type}<br>
+            <strong>Estimated Price:</strong> $${totalFormatted}<br><br>
+            <img src="${staticMapUrl}" alt="Map of property" style="width: 100%; border-radius: 6px; margin-bottom: 15px;" />
+            <button onclick="window.open('https://tampalawnpro.com/demo-3394', '_blank')"
+                    style="background: #f4b400; color: #000; padding: 12px 20px; border: none; border-radius: 6px; font-weight: bold; cursor: pointer;">
+              Book This Service →
+            </button>
+          `;
+        } else {
+          resultDiv.innerHTML = "No matching property found.";
+        }
+      } catch (error) {
+        resultDiv.innerHTML = "Error loading property data.";
+        console.error(error);
+      }
     }
 
     function initAutocomplete() {
@@ -256,7 +275,7 @@
   </script>
 
   <script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3EJTm3D0afQzZebyLovtODu0DXGlQAPg&libraries=places&callback=initAutocomplete">
+    src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_API_KEY&libraries=places,geometry,drawing&callback=initAutocomplete">
   </script>
 </body>
 </html>
