--- a/index.html
+++ b/index.html
@@ -3,15 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Property Lookup</title>
+  <title>Estimate Property Area</title>
   <meta name="theme-color" content="#343434">
-  <link rel="manifest" href="/manifest.json">
-  <link rel="apple-touch-icon" href="/icon-192.png">
-  <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.6.2"></script>
-  <script src="https://cdn.jsdelivr.net/npm/pako@2.1.0/dist/pako.min.js"></script>
   <style>
-    * { box-sizing: border-box; }
-
     body {
       font-family: sans-serif;
       background: #f1f1f1;
@@ -29,263 +23,118 @@
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
 
-    .lookup-box h2 {
-      margin-top: 0;
-      font-size: 18px;
-      text-align: center;
-    }
-
-    .lookup-form {
-      display: flex;
-      flex-direction: column;
-      margin-top: 10px;
+    .lookup-input, .lookup-button {
+      font-size: 16px;
+      border-radius: 8px;
+      border: none;
+      padding: 12px;
+      margin-bottom: 10px;
+      width: 100%;
     }
 
     .lookup-input {
-      padding: 12px;
-      border: none;
-      border-radius: 8px;
-      font-size: 16px;
       color: #333;
-      margin-bottom: 10px;
     }
 
     .lookup-button {
       background-color: #f4b400;
       color: #000;
-      padding: 12px 20px;
-      border: none;
-      border-radius: 8px;
-      font-size: 16px;
       cursor: pointer;
-      width: 100%;
-    }
-
-    .secure-text {
-      font-size: 12px;
-      text-align: center;
-      margin-top: 8px;
-      color: #ccc;
-    }
-
-    #result {
-      background: #fff;
-      color: #000;
-      margin-top: 20px;
-      padding: 15px;
-      border-radius: 8px;
     }
 
     #map {
       width: 100%;
       height: 400px;
+      border-radius: 10px;
       margin-top: 20px;
-      border-radius: 8px;
       display: none;
     }
 
-    input::-webkit-contacts-auto-fill-button,
-    input::-webkit-credentials-auto-fill-button {
-      visibility: hidden;
-      display: none !important;
+    #result {
+      margin-top: 20px;
+      background: white;
+      color: black;
+      padding: 15px;
+      border-radius: 10px;
     }
   </style>
 </head>
 <body>
   <div class="lookup-box">
-    <h2>Instant Quote in Seconds</h2>
+    <h2>Estimate Property Size</h2>
 
-    <form id="step1-form" class="lookup-form" onsubmit="handleAddressSubmit(event)">
-      <input 
-        type="search" 
-        id="addressInput" 
-        class="lookup-input" 
-        placeholder="1234 Main Street..." 
-        required 
-        autocomplete="off" 
-        spellcheck="false"
-      />
-      <button type="submit" class="lookup-button">Next →</button>
+    <form onsubmit="startMap(event)">
+      <input type="search" id="addressInput" class="lookup-input" placeholder="1234 Main Street..." required autocomplete="off" />
+      <button type="submit" class="lookup-button">Find and Draw →</button>
     </form>
 
-    <form id="step2-form" class="lookup-form" onsubmit="getProperty(event)" style="display: none; margin-top: 10px;">
-      <input type="text" id="fullName" class="lookup-input" placeholder="Full Name (optional)" />
-      <input type="email" id="email" class="lookup-input" placeholder="Email Address (optional)" />
-      <input type="tel" id="phone" class="lookup-input" placeholder="Phone Number (required)" required />
-      <button type="submit" class="lookup-button">Show My Quote →</button>
-    </form>
-
-    <div class="secure-text">🔒 We keep your info safe and private.</div>
     <div id="result"></div>
     <div id="map"></div>
   </div>
 
   <script>
-    let map;
-    let drawingManager;
+    let map, drawingManager;
 
-    function handleAddressSubmit(event) {
+    function startMap(event) {
       event.preventDefault();
       const address = document.getElementById("addressInput").value.trim();
-      sessionStorage.setItem("selectedAddress", address);
-      document.getElementById("step1-form").style.display = "none";
-      document.getElementById("step2-form").style.display = "flex";
       document.getElementById("map").style.display = "block";
-      geocodeAddressAndInitMap(address);
+      geocodeAddress(address);
     }
 
-    function geocodeAddressAndInitMap(address) {
+    function geocodeAddress(address) {
       const geocodeUrl = `https://maps.googleapis.com/maps/api/geocode/json?address=${encodeURIComponent(address)}&key=AIzaSyC3EJTm3D0afQzZebyLovtODu0DXGlQAPg`;
 
       fetch(geocodeUrl)
-        .then(response => response.json())
+        .then(res => res.json())
         .then(data => {
           const location = data.results[0].geometry.location;
           map = new google.maps.Map(document.getElementById("map"), {
             center: location,
             zoom: 18,
-            mapTypeId: "hybrid"
+            mapTypeId: 'hybrid'
           });
 
-          drawingManager = new google.maps.drawing.DrawingManager({
-            drawingMode: google.maps.drawing.OverlayType.POLYGON,
-            drawingControl: true,
-            drawingControlOptions: {
-              position: google.maps.ControlPosition.TOP_CENTER,
-              drawingModes: ["polygon"]
-            }
-          });
-
-          drawingManager.setMap(map);
-
-          google.maps.event.addListener(drawingManager, "overlaycomplete", function (event) {
-            const polygon = event.overlay;
-            const areaMeters = google.maps.geometry.spherical.computeArea(polygon.getPath());
-            const areaSqFt = areaMeters * 10.7639;
-            alert("🧱 Estimated Drawn Area: " + areaSqFt.toFixed(2) + " sq ft");
-          });
+          initDrawingManager();
         })
-        .catch(error => console.error("Geocode error:", error));
-    }
-
-    async function sendEmail({ fullName, email, phone }) {
-      try {
-        const res = await fetch("https://formspree.io/f/xblylokk", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({
-            fullName,
-            email,
-            phone,
-            message: `New Quote Lead\n\nName: ${fullName}\nEmail: ${email}\nPhone: ${phone}`
-          }),
+        .catch(err => {
+          document.getElementById("result").innerText = "❌ Failed to find address.";
+          console.error(err);
         });
-        if (!res.ok) throw new Error("Email send failed");
-        console.log("✅ Email sent to mstagg@digit2ai.com");
-      } catch (err) {
-        console.error("❌ Email error:", err);
-      }
     }
 
-    function extractHouseNumber(str) {
-      const match = str.trim().match(/^(\d+)/);
-      return match ? match[1] : null;
-    }
-
-    async function getProperty(event) {
-      event.preventDefault();
-      const resultDiv = document.getElementById("result");
-      resultDiv.innerHTML = "🛰 Initiating address lookup and quote calculation...";
-
-      const fullName = document.getElementById("fullName").value.trim();
-      const email = document.getElementById("email").value.trim();
-      const phone = document.getElementById("phone").value.trim();
-
-      await sendEmail({ fullName, email, phone });
-
-      try {
-        const response = await fetch('https://raw.githubusercontent.com/digit2ai/property-lookup-site/main/properties.json.gz');
-        const compressed = new Uint8Array(await response.arrayBuffer());
-        const decompressed = new TextDecoder().decode(pako.ungzip(compressed));
-        const data = JSON.parse(decompressed);
-
-        const userInput = sessionStorage.getItem("selectedAddress") || "";
-        const inputHouse = extractHouseNumber(userInput);
-
-        const fuse = new Fuse(data, {
-          keys: ['Address'],
-          threshold: 0.4,
-          distance: 100,
-          ignoreLocation: true,
-          includeScore: true,
-        });
-
-        const results = fuse.search(userInput);
-        let finalResult = null;
-        for (const r of results) {
-          const house = extractHouseNumber(r.item.Address || "");
-          if (house === inputHouse) {
-            finalResult = r.item;
-            break;
-          }
+    function initDrawingManager() {
+      drawingManager = new google.maps.drawing.DrawingManager({
+        drawingMode: google.maps.drawing.OverlayType.POLYGON,
+        drawingControl: true,
+        drawingControlOptions: {
+          position: google.maps.ControlPosition.TOP_CENTER,
+          drawingModes: ['polygon']
         }
+      });
 
-        if (!finalResult && results.length > 0) {
-          finalResult = results[0].item;
-        }
+      drawingManager.setMap(map);
 
-        if (finalResult) {
-          const basePrice = 40;
-          const rate = 0.005;
-          const total = basePrice + (rate * parseFloat(finalResult["Lot Size"] || 0));
-          const totalFormatted = total.toFixed(2);
-
-          const staticMapUrl = `https://maps.googleapis.com/maps/api/staticmap?center=${encodeURIComponent(finalResult.Address)}&zoom=17&size=400x200&maptype=satellite&markers=color:red%7C${encodeURIComponent(finalResult.Address)}&key=AIzaSyC3EJTm3D0afQzZebyLovtODu0DXGlQAPg`;
-
-          resultDiv.innerHTML = `
-            <strong>Address:</strong> ${finalResult.Address}<br>
-            <strong>Lot Size:</strong> ${finalResult["Lot Size"]} sq ft<br>
-            <strong>Owner:</strong> ${finalResult.Owner}<br>
-            <strong>Type:</strong> ${finalResult.Type}<br>
-            <strong>Estimated Price:</strong> $${totalFormatted}<br><br>
-            <img src="${staticMapUrl}" alt="Map of property" style="width: 100%; border-radius: 6px; margin-bottom: 15px;" />
-            <button onclick="window.open('https://tampalawnpro.com/demo-3394', '_blank')"
-                    style="background: #f4b400; color: #000; padding: 12px 20px; border: none; border-radius: 6px; font-weight: bold; cursor: pointer;">
-              Book This Service →
-            </button>
-          `;
-        } else {
-          resultDiv.innerHTML = "No matching property found.";
-        }
-      } catch (error) {
-        resultDiv.innerHTML = "Error loading property data.";
-        console.error(error);
-      }
+      google.maps.event.addListener(drawingManager, 'overlaycomplete', function (event) {
+        const polygon = event.overlay;
+        const areaMeters = google.maps.geometry.spherical.computeArea(polygon.getPath());
+        const areaSqFt = areaMeters * 10.7639;
+        document.getElementById("result").innerHTML = `
+          🧱 <strong>Drawn Area:</strong> ${areaSqFt.toFixed(2)} sq ft
+        `;
+      });
     }
 
     function initAutocomplete() {
       const input = document.getElementById("addressInput");
       const autocomplete = new google.maps.places.Autocomplete(input, {
         types: ['address'],
-        componentRestrictions: { country: "us" },
-        fields: ["formatted_address", "geometry"]
+        componentRestrictions: { country: "us" }
       });
-
-      input.addEventListener("keydown", (e) => {
-        if (e.key === "Enter") {
-          e.preventDefault();
-        }
-      });
-    }
-
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/service-worker.js')
-        .then(() => console.log('✅ Service Worker registered'))
-        .catch(err => console.error('❌ SW registration failed:', err));
     }
   </script>
 
-  <!-- ✅ FINAL WORKING GOOGLE MAPS API SCRIPT -->
+  <!-- ✅ Google Maps API (your working key and all required libraries) -->
   <script async
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3EJTm3D0afQzZebyLovtODu0DXGlQAPg&libraries=places,geometry,drawing&callback=initAutocomplete">
   </script>
