--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Estimate Property Size</title>
-  <meta name="theme-color" content="#343434" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Estimate Lawn Quote</title>
+  <meta name="theme-color" content="#343434">
   <style>
     body {
       font-family: sans-serif;
-      background: #1a1a1a;
+      background: #f1f1f1;
       margin: 0;
       padding: 20px;
     }
@@ -20,7 +20,7 @@
       padding: 20px;
       max-width: 500px;
       margin: 0 auto;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
 
     .lookup-input, .lookup-button {
@@ -62,7 +62,7 @@
 </head>
 <body>
   <div class="lookup-box">
-    <h2>Estimate Property Size</h2>
+    <h2>Instant Lawn Quote</h2>
 
     <input 
       type="search" 
@@ -98,13 +98,16 @@
     }
 
     function findPlace() {
-      if (!selectedPlaceId) {
-        document.getElementById("result").innerHTML = "❌ Please select a valid address from the dropdown.";
+      const input = document.getElementById("addressInput").value.trim();
+      if (!selectedPlaceId && !input) {
+        document.getElementById("result").innerHTML = "❌ Please select a valid address.";
         return;
       }
 
       const geocoder = new google.maps.Geocoder();
-      geocoder.geocode({ placeId: selectedPlaceId }, (results, status) => {
+      const request = selectedPlaceId ? { placeId: selectedPlaceId } : { address: input };
+
+      geocoder.geocode(request, (results, status) => {
         if (status === "OK" && results[0]) {
           const location = results[0].geometry.location;
           document.getElementById("map").style.display = "block";
@@ -116,6 +119,10 @@
           });
 
           initDrawingManager();
+          document.getElementById("result").innerHTML = `
+            📍 <strong>Address:</strong> ${results[0].formatted_address}<br>
+            ✅ Map loaded — please draw your lawn area to estimate pricing.
+          `;
         } else {
           document.getElementById("result").innerHTML = "❌ Geocoding failed. Try a different address.";
         }
@@ -138,17 +145,27 @@
         const polygon = event.overlay;
         const areaMeters = google.maps.geometry.spherical.computeArea(polygon.getPath());
         const areaSqFt = areaMeters * 10.7639;
-        document.getElementById("result").innerHTML = `
-          🧱 <strong>Drawn Area:</strong> ${areaSqFt.toFixed(2)} sq ft
+
+        const basePrice = 40;
+        const ratePerSqFt = 0.005;
+        const totalPrice = basePrice + areaSqFt * ratePerSqFt;
+
+        document.getElementById("result").innerHTML += `
+          <br><br>
+          🧱 <strong>Drawn Area:</strong> ${areaSqFt.toFixed(2)} sq ft<br>
+          💵 <strong>Estimated Price:</strong> $${totalPrice.toFixed(2)}<br><br>
+          <button onclick="window.open('https://tampalawnpro.com/demo-3394', '_blank')"
+                  style="background: #f4b400; color: #000; padding: 12px 20px; border: none; border-radius: 6px; font-weight: bold; cursor: pointer;">
+            Book This Service →
+          </button>
         `;
       });
     }
   </script>
 
-  <!-- ✅ Your actual API key + required libraries -->
+  <!-- ✅ Load Google Maps API with required libraries -->
   <script async
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3EJTm3D0afQzZebyLovtODu0DXGlQAPg&libraries=places,geometry,drawing&callback=initAutocomplete">
   </script>
 </body>
 </html>
-
