--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
     function initDrawingManager() {
       if (drawingManager) {
-        drawingManager.setMap(null); // Clear previous manager
+        drawingManager.setMap(null); // clear previous
       }
 
       drawingManager = new google.maps.drawing.DrawingManager({
@@ -170,9 +170,10 @@
     }
   </script>
 
-  <!-- ✅ Load Google Maps API with required libraries -->
+  <!-- ✅ Google Maps API with Drawing Library -->
   <script async
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3EJTm3D0afQzZebyLovtODu0DXGlQAPg&libraries=places,geometry,drawing&callback=initAutocomplete">
   </script>
 </body>
 </html>
+
