--- a/index.html
+++ b/index.html
@@ -58,6 +58,22 @@
       padding: 15px;
       border-radius: 10px;
     }
+
+    #tutorialOverlay {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.85);
+      color: white;
+      display: none;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+      padding: 20px;
+      text-align: center;
+      flex-direction: column;
+    }
   </style>
 </head>
 <body>
@@ -77,6 +93,20 @@
 
     <div id="result"></div>
     <div id="map"></div>
+  </div>
+
+  <!-- 📘 Tutorial Overlay -->
+  <div id="tutorialOverlay">
+    <h2 style="margin-bottom: 20px;">How to Get Your Instant Lawn Quote</h2>
+    <p style="max-width: 400px; font-size: 16px;">
+      1️⃣ Tap the <strong>gray polygon tool</strong> at the top of the map.<br><br>
+      2️⃣ Tap around your lawn to outline the area.<br><br>
+      3️⃣ Double-tap or close the shape to finish.<br><br>
+      ✅ We’ll instantly calculate your square footage and give you a price.
+    </p>
+    <button onclick="hideTutorial()" style="margin-top: 30px; padding: 12px 20px; font-size: 16px; border-radius: 6px; background: #f4b400; color: black; border: none; font-weight: bold;">
+      Got it — Let's Start Drawing →
+    </button>
   </div>
 
   <script>
@@ -119,6 +149,7 @@
           });
 
           initDrawingManager();
+          showTutorial(); // 👈 Show tutorial overlay here
 
           document.getElementById("result").innerHTML = `
             📍 <strong>Address:</strong> ${results[0].formatted_address}<br><br>
@@ -167,6 +198,18 @@
           </div>
         `;
       });
+    }
+
+    // 📘 Tutorial logic
+    function showTutorial() {
+      if (!sessionStorage.getItem("tutorialSeen")) {
+        document.getElementById("tutorialOverlay").style.display = "flex";
+        sessionStorage.setItem("tutorialSeen", "yes");
+      }
+    }
+
+    function hideTutorial() {
+      document.getElementById("tutorialOverlay").style.display = "none";
     }
   </script>
 
