--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       top: 0; left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0,0,0,0.85);
+      background: rgba(0,0,0,0.9);
       color: white;
       display: none;
       justify-content: center;
@@ -95,15 +95,16 @@
     <div id="map"></div>
   </div>
 
-  <!-- 📘 Tutorial Overlay -->
+  <!-- 📘 Tutorial Overlay (VISUAL STEPS) -->
   <div id="tutorialOverlay">
-    <h2 style="margin-bottom: 20px;">How to Get Your Instant Lawn Quote</h2>
-    <p style="max-width: 400px; font-size: 16px;">
-      1️⃣ Tap the <strong>gray polygon tool</strong> at the top of the map.<br><br>
-      2️⃣ Tap around your lawn to outline the area.<br><br>
-      3️⃣ Double-tap or close the shape to finish.<br><br>
-      ✅ We’ll instantly calculate your square footage and give you a price.
-    </p>
+    <h2 style="margin-bottom: 20px;">🎯 How to Get Your Instant Lawn Quote</h2>
+
+    <div style="max-width: 420px; display: flex; flex-direction: column; gap: 20px; font-size: 16px; line-height: 1.6; text-align: left;">
+      <div>🔲 <strong>Step 1:</strong> Tap the <strong>Polygon Tool</strong> at the top of the map.</div>
+      <div>📍 <strong>Step 2:</strong> Tap points around your lawn to draw the area.</div>
+      <div>✅ <strong>Step 3:</strong> Close the shape. You’ll get an instant square footage & price.</div>
+    </div>
+
     <button onclick="hideTutorial()" style="margin-top: 30px; padding: 12px 20px; font-size: 16px; border-radius: 6px; background: #f4b400; color: black; border: none; font-weight: bold;">
       Got it — Let's Start Drawing →
     </button>
@@ -149,12 +150,11 @@
           });
 
           initDrawingManager();
-          showTutorial(); // 👈 Show tutorial overlay here
+          showTutorial();
 
           document.getElementById("result").innerHTML = `
             📍 <strong>Address:</strong> ${results[0].formatted_address}<br><br>
-            ✅ <strong>Instructions:</strong> Tap the <strong>polygon tool</strong> in the top center of the map, then tap to draw your lawn. 
-            Double-tap to close the shape. We’ll instantly calculate square footage and give you a quote.
+            ✅ <strong>Instructions:</strong> Use the polygon tool above the map to draw your lawn and get a quote.
           `;
         } else {
           document.getElementById("result").innerHTML = "❌ Geocoding failed. Try a different address.";
@@ -164,7 +164,7 @@
 
     function initDrawingManager() {
       if (drawingManager) {
-        drawingManager.setMap(null); // clear previous
+        drawingManager.setMap(null);
       }
 
       drawingManager = new google.maps.drawing.DrawingManager({
@@ -200,7 +200,7 @@
       });
     }
 
-    // 📘 Tutorial logic
+    // 💡 Tutorial functions
     function showTutorial() {
       if (!sessionStorage.getItem("tutorialSeen")) {
         document.getElementById("tutorialOverlay").style.display = "flex";
@@ -213,10 +213,9 @@
     }
   </script>
 
-  <!-- ✅ Google Maps API with Drawing Library -->
+  <!-- ✅ Load Google Maps API with drawing tools -->
   <script async
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3EJTm3D0afQzZebyLovtODu0DXGlQAPg&libraries=places,geometry,drawing&callback=initAutocomplete">
   </script>
 </body>
 </html>
-
