--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       top: 0; left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0,0,0,0.95);
+      background: rgba(0,0,0,0.9);
       color: white;
       display: none;
       justify-content: center;
@@ -95,10 +95,10 @@
     <div id="map"></div>
   </div>
 
-  <!-- 🎥 Tutorial Overlay with Video -->
+  <!-- 📘 Tutorial Overlay With YouTube Video -->
   <div id="tutorialOverlay">
-    <h2 style="margin-bottom: 20px;">🎯 How to Get Your Instant Lawn Quote</h2>
-    <div style="max-width: 90%; max-width: 560px;">
+    <h2 style="margin-bottom: 20px;">🎯 How to Draw Your Lawn</h2>
+    <div style="max-width: 420px; width: 100%;">
       <iframe width="100%" height="315"
         src="https://www.youtube.com/embed/cNzmciDoQtk?autoplay=1&mute=1&rel=0"
         title="How to Draw Your Lawn Area"
