--- a/index.html
+++ b/index.html
@@ -95,21 +95,21 @@
     <div id="map"></div>
   </div>
 
-  <!-- 📘 Tutorial Overlay With YouTube Video -->
+  <!-- 📘 Tutorial Overlay (VISUAL STEPS + Video) -->
   <div id="tutorialOverlay">
-    <h2 style="margin-bottom: 20px;">🎯 How to Draw Your Lawn</h2>
-    <div style="max-width: 420px; width: 100%;">
-      <iframe width="100%" height="315"
-        src="https://www.youtube.com/embed/cNzmciDoQtk?autoplay=1&mute=1&rel=0"
-        title="How to Draw Your Lawn Area"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen
-        style="border-radius: 10px;">
-      </iframe>
-    </div>
+    <h2 style="margin-bottom: 20px;">🎯 How to Get Your Instant Lawn Quote</h2>
+
+    <iframe width="100%" height="315"
+      src="https://www.youtube.com/embed/cNzmciDoQtk?autoplay=1&mute=1&rel=0"
+      title="How to Draw Your Lawn Area"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen
+      style="border-radius: 10px; max-width: 560px;">
+    </iframe>
+
     <button onclick="hideTutorial()" style="margin-top: 30px; padding: 12px 20px; font-size: 16px; border-radius: 6px; background: #f4b400; color: black; border: none; font-weight: bold;">
-      Got it — Let's Start Drawing →
+      Got it — Don’t show this again →
     </button>
   </div>
 
@@ -203,18 +203,20 @@
       });
     }
 
+    // 💡 Tutorial functions
     function showTutorial() {
-      if (!sessionStorage.getItem("tutorialSeen")) {
+      if (localStorage.getItem("tutorialDismissed") !== "yes") {
         document.getElementById("tutorialOverlay").style.display = "flex";
-        sessionStorage.setItem("tutorialSeen", "yes");
       }
     }
 
     function hideTutorial() {
       document.getElementById("tutorialOverlay").style.display = "none";
+      localStorage.setItem("tutorialDismissed", "yes");
     }
   </script>
 
+  <!-- ✅ Load Google Maps API with drawing tools -->
   <script async
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3EJTm3D0afQzZebyLovtODu0DXGlQAPg&libraries=places,geometry,drawing&callback=initAutocomplete">
   </script>
