--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
       padding: 20px;
     }
 
+    .video-container {
+      max-width: 600px;
+      margin: 0 auto 30px auto;
+      aspect-ratio: 16 / 9;
+      border-radius: 12px;
+      overflow: hidden;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.4);
+    }
+
+    .video-container iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+
     .lookup-box {
       background: #2b2b2b;
       color: white;
@@ -74,26 +89,23 @@
       text-align: center;
       flex-direction: column;
     }
-
-    .video-container {
-      max-width: 800px;
-      margin: 40px auto;
-      border-radius: 10px;
-      overflow: hidden;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.4);
-    }
-
-    iframe {
-      width: 100%;
-      height: 450px;
-      border: none;
-    }
   </style>
 </head>
 <body>
+
+  <!-- 🎥 YouTube Video -->
+  <div class="video-container">
+    <iframe 
+      src="https://www.youtube.com/embed/hQoLyGRjtwU?rel=0" 
+      title="Lawn Quote Tutorial"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+      allowfullscreen>
+    </iframe>
+  </div>
+
+  <!-- 🟩 Quote Form -->
   <div class="lookup-box">
     <h2>Instant Lawn Quote</h2>
-
     <input 
       type="search" 
       id="addressInput" 
@@ -102,33 +114,19 @@
       required 
       autocomplete="off" 
     />
-
     <button onclick="findPlace()" class="lookup-button">Find and Draw →</button>
-
     <div id="result"></div>
     <div id="map"></div>
   </div>
 
-  <!-- 🎥 Embedded YouTube Tutorial -->
-  <div class="video-container">
-    <iframe 
-      src="https://www.youtube.com/embed/hQoLyGRjtwU?autoplay=1&mute=1&rel=0" 
-      title="Lawn Quote Tutorial"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-      allowfullscreen>
-    </iframe>
-  </div>
-
-  <!-- 📘 Tutorial Overlay (VISUAL STEPS) -->
+  <!-- 📘 Tutorial Overlay -->
   <div id="tutorialOverlay">
     <h2 style="margin-bottom: 20px;">🎯 How to Get Your Instant Lawn Quote</h2>
-
     <div style="max-width: 420px; display: flex; flex-direction: column; gap: 20px; font-size: 16px; line-height: 1.6; text-align: left;">
       <div>🔲 <strong>Step 1:</strong> Tap the <strong>Polygon Tool</strong> at the top of the map.</div>
       <div>📍 <strong>Step 2:</strong> Tap points around your lawn to draw the area.</div>
       <div>✅ <strong>Step 3:</strong> Close the shape. You’ll get an instant square footage & price.</div>
     </div>
-
     <button onclick="hideTutorial()" style="margin-top: 30px; padding: 12px 20px; font-size: 16px; border-radius: 6px; background: #f4b400; color: black; border: none; font-weight: bold;">
       Got it — Let's Start Drawing →
     </button>
