--- a/index.html
+++ b/index.html
@@ -71,16 +71,37 @@
   </div>
 
   <script>
+    let selectedPlaceId = null;
+
     function openQuoteWindow() {
-      const address = document.getElementById("addressInput").value.trim();
-      if (!address) {
+      const input = document.getElementById("addressInput").value.trim();
+      if (!input) {
         alert("❌ Please enter a valid address.");
         return;
       }
-
-      const encoded = encodeURIComponent(address);
+      const encoded = encodeURIComponent(input);
       window.open(`quote.html?address=${encoded}`, '_blank');
     }
+
+    function initAutocomplete() {
+      const input = document.getElementById("addressInput");
+      const autocomplete = new google.maps.places.Autocomplete(input, {
+        types: ['address'],
+        componentRestrictions: { country: "us" }
+      });
+
+      autocomplete.addListener("place_changed", () => {
+        const place = autocomplete.getPlace();
+        if (place.place_id) {
+          selectedPlaceId = place.place_id;
+        }
+      });
+    }
+  </script>
+
+  <!-- ✅ Load Google Maps Places API for Autocomplete -->
+  <script async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3EJTm3D0afQzZebyLovtODu0DXGlQAPg&libraries=places&callback=initAutocomplete">
   </script>
 </body>
 </html>
