--- a/quote.html
+++ b/quote.html
@@ -14,7 +14,7 @@
 
     .logo-container {
       text-align: center;
-      margin-bottom: 10px;
+      margin-bottom: 0;
     }
 
     .logo-container img {
@@ -26,7 +26,7 @@
       color: white;
       font-weight: bold;
       text-align: center;
-      margin-top: 0;
+      margin-top: 4px;
     }
 
     #map {
