--- a/quote.html
+++ b/quote.html
@@ -14,19 +14,22 @@
 
     .logo-container {
       text-align: center;
-      margin-bottom: 0;
+      margin: 0;
     }
 
     .logo-container img {
       max-width: 180px;
       height: auto;
+      display: block;
+      margin: 0 auto;
     }
 
     h2 {
       color: white;
       font-weight: bold;
       text-align: center;
-      margin-top: 4px;
+      margin-top: 0;
+      margin-bottom: 0;
     }
 
     #map {
