--- a/quote.html
+++ b/quote.html
@@ -126,7 +126,7 @@
               <strong>📍 Address:</strong> ${results[0].formatted_address}<br>
               <strong>🧱 Lawn Size:</strong> ${areaSqFt.toFixed(2)} sq ft<br>
               <strong>💵 Estimated Price:</strong> $${totalPrice.toFixed(2)}<br><br>
-              <button onclick="window.open('https://tampalawnpro.com/demo-3394', '_blank')">
+              <button onclick="window.open('https://tampalawnpro.com/onboarding-demo-8560', '_blank')">
                 ✅ Book This Lawn Service
               </button>
             `;
