--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </head>
 <body>
   <div class="lookup-box">
-    <h2>Instant Lawn Quote</h2>
+    <h2>Cotización Instantánea</h2>
 
     <input
       type="search"
@@ -65,7 +65,7 @@
       autocomplete="off"
     />
 
-    <button onclick="openQuoteWindow()" class="lookup-button">Find and Draw →</button>
+    <button onclick="openQuoteWindow()" class="lookup-button">Busca y Dibuja →</button>
 
     <div id="result"></div>
   </div>
