--- a/quote.html
+++ b/quote.html
@@ -132,7 +132,7 @@
             `;
           });
 
-          document.getElementById("result").innerHTML = "✅ Use the polygon tool to draw your lawn.";
+          document.getElementById("result").innerHTML = "✅ Usa la herramienta de polígono para dibujar tu césped";
         } else {
           document.getElementById("result").innerText = "❌ Geocoding failed.";
         }
